<resources>
    <string name="app_name">BandHack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="walking_title">Walking</string>
    <string name="walking_info">Number of steps per day</string>
    <string name="walking_today">Today:</string>
    <string name="walking_average">Average:</string>
    <string name="walking_next_goal">Next goal:</string>
    <string name="walking_walking_score">Walking score</string>
    <string name="walking_quick_tips">Quick tips</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="default_summary_score">7.1</string>
    <string name="your_score_text">Your score</string>
    <string name="default_discount">2%</string>
    <string name="current_discount_label">Current discount</string>
    <string name="sleep_subtitle">Sleep</string>
    <string name="calories_subtitle">Calories</string>
    <string name="heart_subtitle">Heart</string>
    <string name="DEVICE_ID">b6a047f3-3f25-44b4-b907-97e40f4c2445</string>
</resources>
