<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/aviva_white"
    tools:context="com.knowledgeprice.bandhack.WalkingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/walking_info" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/walking_today" />
    <include
        android:id="@+id/today"
        layout="@layout/progress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:layout_marginTop="15dp"
        android:text="@string/walking_average" />
    <include
        android:id="@+id/average"
        layout="@layout/progress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:layout_marginTop="15dp"
        android:text="@string/walking_next_goal" />
    <include
        android:id="@+id/next_goal"
        layout="@layout/progress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:baselineAligned="false">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/walking_walking_score"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8.0"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking_quick_tips"
            android:layout_weight="1.0"
            android:gravity="right"/>
    </LinearLayout>

</LinearLayout>
