<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.knowledgeprice.bandhack.SummaryActivity$PlaceholderFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scoreRow"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/default_summary_score"
            android:textSize="100sp"
            android:id="@+id/calculatedScore"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/your_score_text"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/default_discount"
            android:id="@+id/discountAmount"
            android:gravity="center_vertical"
            android:textSize="80sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/current_discount_label"
            android:id="@+id/currentDiscount"
            android:gravity="top"
            android:layout_weight="1"
            android:textSize="25sp"
            />

        <HorizontalScrollView
            android:id="@+id/sensorsRow"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:background="@color/primary_material_light"
                android:paddingLeft="25dp">

                <LinearLayout
                    style="@style/horizontal_navigation">
                    <ImageButton
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Walking"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/horizontal_navigation">
                    <ImageButton
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sleep_subtitle"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/horizontal_navigation">
                    <ImageButton
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Heart"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/horizontal_navigation">
                    <ImageButton
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calories_subtitle"
                        android:gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</RelativeLayout>
